# clone-hero-maker

./: .gitignore  AIO_LAUNCHER.py  CONTROLLER_EDITING_COMPLETE.md  CONTROLLER_EDITING_GUIDE.md  FEATURES.md  FIXES_APPLIED.md  GUITAR_CONTROLLER_GUIDE.md  LAUNCH.bat  README.md  README_COMPLETE.md  SAM_AUDIO_GUIDE.md  SETUP_COMPLETE.md  START_HERE.bat  START_HERE.md  app.py  chart_generator.py  chart_maker.py  chart_maker_gui.py  chart_parser.py  chorus_api.py  config.yaml  controller_capture.py  controller_chart_editor.py  download_manager.py  guitar_chart_maker.py  main_app.py  midi_capture.py  pyproject.toml  requirements.txt  sam_audio_separator.py  test_system.py  visual_editor.py
src/: __init__.py  audio_to_midi.py  chart_writer.py  cli.py  map_to_frets.py  parse_midi.py
static/: app.js  editor.css  editor.js  style.css
templates/: index.html
tests/: __init__.py  test_chart_writer.py  test_mapping.py
